--- a/package.json
+++ b/package.json
@@ -4,7 +4,9 @@
   "description": "",
   "main": "index.js",
   "scripts": {
-    "test": "jest"
+    "test": "jest",
+    "build": "esbuild src/main.js --bundle --minify --platform=node --outfile=dist/main.js"
+
   },
   "keywords": [],
   "author": "",
@@ -17,6 +19,8 @@
     "@babel/core": "^7.23.2",
     "@babel/preset-env": "^7.23.2",
     "babel-loader": "^9.1.3",
+    "esbuild": "0.19.5",
+    "esbuild-plugin-babel": "^0.2.3",
     "eslint": "^8.52.0",
     "eslint-config-prettier": "^9.0.0",
     "eslint-config-standard": "^17.1.0",
@@ -25,6 +29,6 @@
     "eslint-plugin-prettier": "^5.0.1",
     "eslint-plugin-promise": "^6.1.1",
     "jest": "^29.7.0",
-    "prettier": "3.0.3",
+    "prettier": "3.0.3"
   }
 }
