--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -8,7 +8,10 @@ jobs:
     steps:
       - uses: actions/checkout@v4
       - uses: actions/setup-node@v3
-      - run: npm install
+      - name: Install and build node assets
+        run: |
+          npm install --silent
+          npm run build
       - uses: ./
         id: echo-test
         with:
