--- a/.github/workflows/release.yml
+++ b/.github/workflows/release.yml
@@ -24,5 +24,5 @@ jobs:
           git push -f origin releases/v1
       - name: Tag and push v1
         run: |
-          git tag -f v1 v1
+          git tag -f v1 # Since we are already on releases/v1 we don't need a ref. This will tag HEAD of releases/v1.
           git push origin v1 --force
